# PRIMEboard_backend

./: .gitignore  dev.Dockerfile  prod.Dockerfile  pyproject.toml
app_backend/: database.py  db_handlers.py  main.py  models.py  schemas.py
app_backend/utils/: elasticsearcher.py  nm_collector.py  online_total.py  scripts.py  shard_config_getter.py  shard_config_parser.py  work_piece_parser.py
